# gpt3-to-speech-tg-bot

./: .replit  botgram.py  pyproject.toml  requirements.txt  text2speech.py
