[tool.poetry]
name = "repl_nix_gpt3-to-speech-tg-bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.25.0"
pydub = "^0.25.1"
pygame = "^2.1.2"
telegram = "^0.0.1"
gTTS = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
